Sandbox Refresh Assistant  (Package for Source Org)/objects/Data_Migration_Auth__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetOrgId__c</fullName>
        <label>TargetOrg Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>library_name__c</fullName>
        <label>library name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>named_credentials__c</fullName>
        <label>named credentials</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>org_name__c</fullName>
        <label>org name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>security_token__c</fullName>
        <label>security token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Data Migration Auth</label>
</CustomObject>